Allow multiple CORS origins

--- a/backend/env.sample
+++ b/backend/env.sample
@@ -3,6 +3,7 @@ MONGO_URI=mongodb://127.0.0.1:27017/society_connect
 JWT_SECRET=please-change-me
 JWT_EXPIRY=7d
 CLIENT_URL=http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173,https://your-production-frontend.com
 
 SMTP_HOST=
 SMTP_PORT=587
