--- a/backend/env.sample
+++ b/backend/env.sample
@@ -4,6 +4,7 @@ JWT_SECRET=please-change-me
 JWT_EXPIRY=7d
 CLIENT_URL=http://localhost:5173
 ALLOWED_ORIGINS=http://localhost:5173,https://your-production-frontend.com
+ALLOWED_ORIGIN_SUFFIXES=.vercel.app
 
 SMTP_HOST=
 SMTP_PORT=587
